tests/fixtures/invalid/round_bytes_int.py
# Cannot call round() with Bytes, Int
x = round(b"hello", 1)
